[metadata]
description-file = README.md


[options.extras_require]
lint =
    black ==24.4.2
    isort ==5.13.2
    flake8 ==5.0.4
testing = 
    coverage ==6.4.1

[flake8]
ignore = C901,W503
max-line-length = 120

[isort]
known_first_party=wagtail_guide
profile=black
skip=migrations,node_modules,venv
sections=STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
